# FinRizz

./: .env.contracts  .env.example  .gitignore  CONTRACT_DEPLOYMENT_SUCCESS.md  FRONTEND_TESTING_GUIDE.md  PAYMENT_INTEGRATION.md  README_0G.md  agents.py  bot.py  contracts-package.json  hardhat.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_0g.txt  testagno.py
agentic_backend/: agents.py  bot.py  main.py  requirements.txt
backend/: .env.example  credits-api.ts  package.json
contracts/: FinRizzCredits.sol
hardhat-contracts/: .env.example  deployment-info.json  hardhat.config.cjs  package-lock.json  package.json
hardhat-contracts/artifacts/@openzeppelin/contracts/access/Ownable.sol/: Ownable.dbg.json
hardhat-contracts/artifacts/contracts/FinRizzCredits.sol/: FinRizzCredits.dbg.json  FinRizzCredits.json
hardhat-contracts/cache/: solidity-files-cache.json
hardhat-contracts/contracts/: FinRizzCredits.sol
hardhat-contracts/scripts/: deploy.js
pyeth/: zg_pyth_oracle.py
scripts/: deploy.js
